Use easing penner algo Add changing color on mousemove

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,12 +1,13 @@
 body{
   margin: 0;
   font-family: 'Roboto Slab';
+  min-height: 800px;
 }
 
 section{
   padding: 3rem;
-  margin-top: 500px;
-  margin-bottom: 500px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   background-color: #313033;
   color: #ffffff;
   position: relative;
